// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Secret Manager Wizard should render form 1`] = `
<div>
  <div
    class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
  >
    <div
      class="StepWizard---navBarList--2ILN"
    >
      <div
        class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          1
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          CREATE
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          2
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          CONFIGURE
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          3
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          VERIFY
        </p>
      </div>
    </div>
    <div
      class="StepWizard---stepDetails--Uaxx"
    >
       
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---padding-bottom-large--1zGv StyledProps---padding-top-small--1-XA"
      >
        Create Secret Manager
      </p>
      <div
        class="StyledProps---font--2ipy StyledProps---main--1Wws"
        style="width: 64%;"
      >
        <div
          class="OverlaySpinner---overlaySpinner--3Bs3"
        >
          <form
            class="FormikForm---main--1N87"
          >
            <div>
              <div
                class="InputWithIdentifier---txtNameContainer--20iZ"
              >
                <div
                  class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                >
                  <p
                    class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="InputWithIdentifier---idInput--w8_T"
                    contenteditable="true"
                  />
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
                    icon="edit"
                    style="vertical-align: middle;"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    Secret Manager Name
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="encryptionType-1"
              >
                <label
                  class="bp3-label"
                  for="encryptionType"
                >
                  Encryption Type
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select---main--1QpB bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="encryptionType"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="Hashicorp Vault"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws StyledProps---padding-small--3f0A"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="description-2"
              >
                <label
                  class="bp3-label"
                  for="description"
                >
                  Description
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    name="description"
                  />
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="tags-3"
              >
                <label
                  class="bp3-label"
                  for="tags"
                >
                  Tags
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper TagInput---tagInput--1eAz bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="bp3-input bp3-tag-input bp3-fill bp3-multi-select TagInput---input--2yQS"
                        >
                          <div
                            class="bp3-tag-input-values"
                          >
                            <span
                              class="bp3-tag bp3-minimal TagInput---tag--2ZBU TagInput---addTagButton--1ENX"
                              data-tag-index="0"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                + tag
                              </span>
                              <button
                                class="bp3-tag-remove"
                                type="button"
                              >
                                <span
                                  class="bp3-icon bp3-icon-small-cross"
                                  icon="small-cross"
                                >
                                  <svg
                                    data-icon="small-cross"
                                    height="16"
                                    viewBox="0 0 16 16"
                                    width="16"
                                  >
                                    <desc>
                                      small-cross
                                    </desc>
                                    <path
                                      d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </span>
                            <input
                              class="bp3-input-ghost bp3-multi-select-tag-input-input"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Continue
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form 2`] = `
<div>
  <div
    class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
  >
    <div
      class="StepWizard---navBarList--2ILN"
    >
      <div
        class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          1
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          CREATE
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          2
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          CONFIGURE
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          3
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          VERIFY
        </p>
      </div>
    </div>
    <div
      class="StepWizard---stepDetails--Uaxx"
    >
       
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---padding-bottom-large--1zGv StyledProps---padding-top-small--1-XA"
      >
        Create Secret Manager
      </p>
      <div
        class="StyledProps---font--2ipy StyledProps---main--1Wws"
        style="width: 64%;"
      >
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---background-red200--2smZ StyledProps---padding-medium--3Ish StyledProps---flex--2Jz8 StyledProps---border--uz_- StyledProps---border-color-red300--2J-Y StyledProps---border-bottom--6lR5"
          style="padding: 10px 20px;"
        >
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---flex--2Jz8"
            style="justify-content: flex-start;"
          >
            <span
              class="bp3-icon bp3-icon-warning-sign StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-red500--uX9L StyledProps---margin-right-xsmall--1WI2"
              icon="warning-sign"
            >
              <svg
                data-icon="warning-sign"
                height="24"
                viewBox="0 0 20 20"
                width="24"
              >
                <desc>
                  warning-sign
                </desc>
                <path
                  d="M19.86 17.52l.01-.01-9-16-.01.01C10.69 1.21 10.37 1 10 1s-.69.21-.86.52l-.01-.01-9 16 .01.01c-.08.14-.14.3-.14.48 0 .55.45 1 1 1h18c.55 0 1-.45 1-1 0-.18-.06-.34-.14-.48zM11 17H9v-2h2v2zm0-3H9V6h2v8z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <div
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-small--3f0A"
            >
              <p
                class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---color--8PuS StyledProps---color-red500--uX9L"
                data-type="single-message"
                style="overflow-wrap: break-word; word-wrap: break-word; hyphens: auto; --text-line-clamp: 5;"
              >
                Duplicate identifier
              </p>
            </div>
          </div>
        </div>
        <div
          class="OverlaySpinner---overlaySpinner--3Bs3"
        >
          <form
            class="FormikForm---main--1N87"
          >
            <div>
              <div
                class="InputWithIdentifier---txtNameContainer--20iZ"
              >
                <div
                  class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                >
                  <p
                    class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="InputWithIdentifier---idInput--w8_T"
                    contenteditable="true"
                  >
                    dummy_name
                    
                  </span>
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
                    icon="edit"
                    style="vertical-align: middle;"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    Secret Manager Name
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="dummy name"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="encryptionType-1"
              >
                <label
                  class="bp3-label"
                  for="encryptionType"
                >
                  Encryption Type
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select---main--1QpB bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="encryptionType"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="Hashicorp Vault"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws StyledProps---padding-small--3f0A"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="description-2"
              >
                <label
                  class="bp3-label"
                  for="description"
                >
                  Description
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    name="description"
                  />
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="tags-3"
              >
                <label
                  class="bp3-label"
                  for="tags"
                >
                  Tags
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper TagInput---tagInput--1eAz bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="bp3-input bp3-tag-input bp3-fill bp3-multi-select TagInput---input--2yQS"
                        >
                          <div
                            class="bp3-tag-input-values"
                          >
                            <span
                              class="bp3-tag bp3-minimal TagInput---tag--2ZBU TagInput---addTagButton--1ENX"
                              data-tag-index="0"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                + tag
                              </span>
                              <button
                                class="bp3-tag-remove"
                                type="button"
                              >
                                <span
                                  class="bp3-icon bp3-icon-small-cross"
                                  icon="small-cross"
                                >
                                  <svg
                                    data-icon="small-cross"
                                    height="16"
                                    viewBox="0 0 16 16"
                                    width="16"
                                  >
                                    <desc>
                                      small-cross
                                    </desc>
                                    <path
                                      d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </span>
                            <input
                              class="bp3-input-ghost bp3-multi-select-tag-input-input"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Continue
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
